--- a/.golangci.yml
+++ b/.golangci.yml
@@ -2,10 +2,15 @@ run:
   deadline: 10m
 
 linters:
-  disable-all: true
   enable:
   - golint
-  - gosimple
-  - govet
-  - staticcheck
-  - unused
+
+issues:
+  exclude-rules:
+  - path: _test.go
+    linters:
+    - errcheck
+
+linters-settings:
+  errcheck:
+    exclude: scripts/errcheck_excludes.txt
