--- a/bundle.yaml
+++ b/bundle.yaml
@@ -3064,6 +3064,21 @@ spec:
               forceEnableClusterMode:
                 description: ForceEnableClusterMode ensures Alertmanager does not deactivate the cluster mode when running with a single replica. Use case is e.g. spanning an Alertmanager cluster across Kubernetes clusters with a single replica in each.
                 type: boolean
+              hostAliases:
+                description: HostAlias holds the mapping between IP and hostnames that will be injected as an entry in the pod's hosts file, if specified. This is only valid for non-hostNetwork pods.
+                items:
+                  description: HostAlias holds the mapping between IP and hostnames that will be injected as an entry in the pod's hosts file.
+                  properties:
+                    hostnames:
+                      description: Hostnames for the above IP address.
+                      items:
+                        type: string
+                      type: array
+                    ip:
+                      description: IP address of the host file entry.
+                      type: string
+                  type: object
+                type: array
               image:
                 description: Image if specified has precedence over baseImage, tag and sha combinations. Specifying the version is still necessary to ensure the Prometheus Operator knows what version of Alertmanager is being configured.
                 type: string
