--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,7 +1,13 @@
 name: ci
 on:
-  - push
-  - pull_request
+  pull_request:
+  push:
+    branches:
+      - 'release-*'
+      - 'master'
+      - 'main'
+    tags:
+      - 'v*'
 env:
   golang-version: '1.16'
   kind-version: 'v0.10.0'
