--- a/.github/stale.yml
+++ b/.github/stale.yml
@@ -8,7 +8,8 @@ daysUntilStale: 60
 daysUntilClose: 120
 
 # Only issues or pull requests with all of these labels are check if stale. Defaults to `[]` (disabled)
-onlyLabels: []
+onlyLabels:
+  - "stale"
 
 # Issues or Pull Requests with these labels will never be considered stale. Set to `[]` to disable
 exemptLabels:
