--- a/bundle.yaml
+++ b/bundle.yaml
@@ -32,7 +32,7 @@ spec:
           metadata:
             type: object
           spec:
-            description: AlertmanagerConfigSpec is a specification of the desired behavior of the Alertmanager configuration. By definition, the Alertmanager configuration only applies to alerts for which the `namespace` label is equal to the namespace of the AlertmanagerConfig resource.
+            description: AlertmanagerConfigSpec is a specification of the desired behavior of the Alertmanager configuration. By definition, the Alertmanager configuration only applies to alerts for which the `namespace` label is equal to the namespace of the AlertmanagerConfig resource, this behavior can be optionally disabled via the `strategy` map
             properties:
               inhibitRules:
                 description: List of inhibition rules. The rules will only apply to alerts matching the resource’s namespace.
@@ -1853,6 +1853,13 @@ spec:
                     items:
                       x-kubernetes-preserve-unknown-fields: true
                     type: array
+                type: object
+              strategy:
+                description: Allow default Strategy to be overridden
+                properties:
+                  noInheritNamespace:
+                    description: Setting noInheritNamespace to true will skip creating a `namespace` match entry the first (parent) route
+                    type: boolean
                 type: object
             type: object
         required:
