Address review feedback
Signed-off-by: Christian Simon <simon@swine.de>

--- a/example/prometheus-operator-crd/monitoring.coreos.com_probes.yaml
+++ b/example/prometheus-operator-crd/monitoring.coreos.com_probes.yaml
@@ -122,7 +122,7 @@ spec:
                     description: Path to collect metrics from. Defaults to `/probe`.
                     type: string
                   proxyUrl:
-                    description: Optional ProxyURL
+                    description: Optional ProxyURL.
                     type: string
                   scheme:
                     description: HTTP scheme to use for scraping. Defaults to `http`.
