--- a/bundle.yaml
+++ b/bundle.yaml
@@ -13690,27 +13690,42 @@ spec:
                     description: Version describes the version of Thanos to use.
                     type: string
                   volumeMounts:
-                    description: VolumeMounts allows configuration of additional VolumeMounts on the output StatefulSet definition. VolumeMounts specified will be appended to other VolumeMounts in the thanos-sidecar container.
+                    description: VolumeMounts allows configuration of additional VolumeMounts
+                      on the output StatefulSet definition. VolumeMounts specified
+                      will be appended to other VolumeMounts in the thanos-sidecar
+                      container.
                     items:
-                      description: VolumeMount describes a mounting of a Volume within a container.
+                      description: VolumeMount describes a mounting of a Volume within
+                        a container.
                       properties:
                         mountPath:
-                          description: Path within the container at which the volume should be mounted.  Must not contain ':'.
+                          description: Path within the container at which the volume
+                            should be mounted.  Must not contain ':'.
                           type: string
                         mountPropagation:
-                          description: mountPropagation determines how mounts are propagated from the host to container and the other way around. When not set, MountPropagationNone is used. This field is beta in 1.10.
+                          description: mountPropagation determines how mounts are
+                            propagated from the host to container and the other way
+                            around. When not set, MountPropagationNone is used. This
+                            field is beta in 1.10.
                           type: string
                         name:
                           description: This must match the Name of a Volume.
                           type: string
                         readOnly:
-                          description: Mounted read-only if true, read-write otherwise (false or unspecified). Defaults to false.
+                          description: Mounted read-only if true, read-write otherwise
+                            (false or unspecified). Defaults to false.
                           type: boolean
                         subPath:
-                          description: Path within the volume from which the container's volume should be mounted. Defaults to "" (volume's root).
+                          description: Path within the volume from which the container's
+                            volume should be mounted. Defaults to "" (volume's root).
                           type: string
                         subPathExpr:
-                          description: Expanded path within the volume from which the container's volume should be mounted. Behaves similarly to SubPath but environment variable references $(VAR_NAME) are expanded using the container's environment. Defaults to "" (volume's root). SubPathExpr and SubPath are mutually exclusive.
+                          description: Expanded path within the volume from which
+                            the container's volume should be mounted. Behaves similarly
+                            to SubPath but environment variable references $(VAR_NAME)
+                            are expanded using the container's environment. Defaults
+                            to "" (volume's root). SubPathExpr and SubPath are mutually
+                            exclusive.
                           type: string
                       required:
                       - mountPath
