--- a/bundle.yaml
+++ b/bundle.yaml
@@ -3192,7 +3192,8 @@ spec:
                 description: Interval between gossip attempts.
                 type: string
               clusterListenLocal:
-                description: ClusterListenLocal makes the Alertmanager server listen on loopback for cluster communication
+                description: ClusterListenLocal makes the Alertmanager server listen
+                  on loopback for cluster communication.
                 type: boolean
               clusterPeerTimeout:
                 description: Timeout for cluster peering.
