--- a/example/prometheus-operator-crd/monitoring.coreos.com_alertmanagers.yaml
+++ b/example/prometheus-operator-crd/monitoring.coreos.com_alertmanagers.yaml
@@ -751,7 +751,8 @@ spec:
                 description: Interval between gossip attempts.
                 type: string
               clusterListenLocal:
-                description: ClusterListenLocal makes the Alertmanager server listen on loopback for cluster communication
+                description: ClusterListenLocal makes the Alertmanager server listen
+                  on loopback for cluster communication.
                 type: boolean
               clusterPeerTimeout:
                 description: Timeout for cluster peering.
